little fix so $ looks aligned in firefox

--- a/css/common.css
+++ b/css/common.css
@@ -7,7 +7,7 @@
     display: none;
 }
 
-html {
+html, input {
     font-family: HelveticaNeue, Helvetica, Arial
 }
 
